# elevatorjam

./: .gitignore  README.md  plan.drawio  pyproject.toml
backend/: main.py
backend/controllers/: main.py
backend/models/: models.py
frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
frontend/app/: index.html  main.0c43eb26e71cd220.js  polyfills.88faf605ce41acbd.js  runtime.81303ca02cd1cfd0.js
frontend/src/: index.html
frontend/src/app/: app.component.spec.ts  app.component.ts
iphone-app/elevatorjam/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
iphone-app/elevatorjam.xcodeproj/: project.pbxproj
iphone-app/elevatorjam.xcodeproj/project.xcworkspace/xcuserdata/aymen.xcuserdatad/: UserInterfaceState.xcuserstate
iphone-app/elevatorjam.xcodeproj/xcuserdata/aymen.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iphone-app/elevatorjam.xcodeproj/xcuserdata/aymen.xcuserdatad/xcschemes/: xcschememanagement.plist
iphone-app/elevatorjam/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
iphone-app/elevatorjamTests/: elevatorjamTests.m
iphone-app/elevatorjamUITests/: elevatorjamUITests.m  elevatorjamUITestsLaunchTests.m
